2004-12-07  Per Bothner  <per@bothner.com>

	* TestMisc.java: Add missing "local:" prefixes.
	* descend.xql: Likewise.
	* use-cases.xml: Likewise.
	* tab.html: Fix expected output.

2004-11-08  Per Bothner  <per@bothner.com>

	* maketab1.xql: Use child:: axis, not non-standard children function.
	* tab.html: Whitespace-tweak expected output.

2004-11-06  Per Bothner  <per@bothner.com>

	* TestMisc.java (main): Add tests for node-name, local-name-from-QName,
	namespace-uri-from-QName, namespace-uri-for-prefix.

2004-05-29  Per Bothner  <per@bothner.com>

	* TestMisc.java (main):  Some extra tests for ingnorable space,
	comments, pi-data, CDATA in element constructors.

2004-05-28  Per Bothner  <per@bothner.com>

	* TestMisc.java (toString):  New static method.
	(main):  Use it.

2004-05-05  Per Bothner  <per@bothner.com>

	* TestMisc.java (main):  Expected output now includes CDATA.

2004-04-18  Per Bothner  <per@bothner.com>

	* TestMisc.java (main):  Include comment in expected output.
	* tab.html:  Likewise.

2004-03-08  Per Bothner  <per@bothner.com>

	* exp-format-users.html:  Don't expect XML declaration.

2004-01-12  Per Bothner  <per@bothner.com>

	* TestMisc.java (main): New testcase for navigating from attribute
	to parent based on bug reported 2003-11-29 by sascha_opletal@web.de.

	* exp-format-users.html:  Update to include XML declaration.

2003-12-26  Per Bothner  <per@bothner.com>

	* TestMisc.java:  Added a new test.

2003-12-25  Per Bothner  <per@bothner.com>

	* TestMisc.java:  Add test for namespace declaration attribute.
	Fix output from another test.

2003-12-21  Per Bothner  <per@bothner.com>

	* Makefile.am (usemod.class):  Specify CLASSPATH explicitly.
	Otherwith we don't find Mod1 when configured --with-gcj.

2003-11-25  Per Bothner  <per@bothner.com>

	* Makefile.am (EXTRA_DIST):  Add new files.

2003-11-21  Per Bothner  <per@bothner.com>

	* TestMisc.java (main):  If M > N then M to N is now empty.
